--- a/changes/28.0.0-alpha.1.md
+++ b/changes/28.0.0-alpha.1.md
@@ -1,7 +1,7 @@
- * \[**BREAKING**\] The filenames and package filenames are changed.
+* \[**BREAKING**\] The filenames and package filenames are changed.
    - They will now use PascalCase instead of kebab-case.
    - To package manager maintainers: Please upgrade your script to make it capable to download and install the fonts under new names, and properly uninstall the fonts under old names.
- * \[**BREAKING**\] Certain properties in the build plans are changed to camelCase. Using them will trigger a build failure.
+* \[**BREAKING**\] Certain properties in the build plans are changed to camelCase. Using them will trigger a build failure.
    - `no-cv-ss` → `noCvSs`
    - `no-ligation` → `noLigation`
    - `export-glyph-names` → `exportGlyphNames`
@@ -10,9 +10,11 @@
    - `compatibility-ligatures` → `compatibilityLigatures`
    - `exclude-chars` → `excludeChars`
    - `webfont-formats` → `webfontFormats`
- * \[**BREAKING**\] The "SGr" TTC packages for Iosevka Aile and Etoile will no longer be generated, as they are duplicates to the non-SGr TTC packages.
- * \[**BREAKING**\] Reorder of glyph variants:
+* \[**BREAKING**\] The "SGr" TTC packages for Iosevka Aile and Etoile will no longer be generated, as they are duplicates to the non-SGr TTC packages.
+* \[**BREAKING**\] Reorder of glyph variants:
    - Influenced characters: `M`, `R`, `f`, `t`, `x`, Long S (`ſ`), Lower Lambda (`λ`), Lower Tau (`τ`), Lower Chi (`χ`), Cyrillic Lower Em (`м`), Cyrillic Lower Ef (`ф`), Cyrillic Ya (`Я`, `я`), `5`.
- * \[**BREAKING**\] Tags for variant features for Cyrillic lowercase Er and U are changed to `cv76` and `cv78`.
+* \[**BREAKING**\] Tags for variant features for Cyrillic lowercase Er and U are changed to `cv76` and `cv78`.
      - Various other glyph variant tags are also changed to reflect this insertion.
- * Add hook-inward-serifed variants for `a` (#2085).
+* Add Characters:
+  - CYRILLIC CAPITAL LETTER LHA (`U+0514`) ... CYRILLIC SMALL LETTER YAE (`U+0519`) (#2018).
+* Add hook-inward-serifed variants for `a` (#2085).
