--- a/changes/28.0.0-alpha.1.md
+++ b/changes/28.0.0-alpha.1.md
@@ -18,3 +18,5 @@
 * Add Characters:
   - CYRILLIC CAPITAL LETTER LHA (`U+0514`) ... CYRILLIC SMALL LETTER YAE (`U+0519`) (#2018).
 * Add hook-inward-serifed variants for `a` (#2085).
+* Remove earless-rounded variants for `U+01A5`, `U+0256`, `U+02A0`, and `U+1D91`.
+* Remove earless-corner variants for `U+027E`.
