Add various medievalist punctuation characters.

--- a/changes/28.0.0-alpha.1.md
+++ b/changes/28.0.0-alpha.1.md
@@ -17,6 +17,9 @@
      - Various other glyph variant tags are also changed to reflect this insertion.
 * Add Characters:
   - CYRILLIC CAPITAL LETTER LHA (`U+0514`) ... CYRILLIC SMALL LETTER YAE (`U+0519`) (#2018).
+  - GEORGIAN PARAGRAPH SEPARATOR (`U+10FB`).
+  - LINE SEPARATOR (`U+2028`) ... PARAGRAPH SEPARATOR (`U+2029`).
+  - TWO DOTS OVER ONE DOT PUNCTUATION (`U+2E2A`) ... FIVE DOT MARK (`U+2E2D`).
 * Add hook-inward-serifed variants for `a` (#2085).
 * Remove earless-rounded variants for `U+01A5`, `U+0256`, `U+02A0`, and `U+1D91`.
 * Remove earless-corner variants for `U+027E`.
