--- a/changes/28.0.0-alpha.1.md
+++ b/changes/28.0.0-alpha.1.md
@@ -19,7 +19,7 @@
   - CYRILLIC CAPITAL LETTER LHA (`U+0514`) ... CYRILLIC SMALL LETTER YAE (`U+0519`) (#2018).
   - GEORGIAN PARAGRAPH SEPARATOR (`U+10FB`).
   - COMBINING BREVE-MACRON (`U+1DCB`) ... COMBINING MACRON-BREVE (`U+1DCC`) (#1880).
-  - COMBINING LATIN LETTER FLATTENED OPEN A (`U+1DD3`).
+  - COMBINING LATIN SMALL LETTER FLATTENED OPEN A ABOVE (`U+1DD3`).
   - LINE SEPARATOR (`U+2028`) ... PARAGRAPH SEPARATOR (`U+2029`).
   - RAISED SQUARE (`U+2E0B`).
   - HYPODIASTOLE (`U+2E12`).
