Add an auto-serifed form for Greek Small Heta.
Also further cleanup `k.ptl` from #2094 .

--- a/changes/28.0.0-alpha.2.md
+++ b/changes/28.0.0-alpha.2.md
@@ -1,3 +1,4 @@
 * Improve serifs for turned k (`U+029E`) to match `q` and turned h (`U+0265`).
 * Improve top-left serif for LATIN SMALL LETTER KRA (`U+0138`) to match `k`.
 * Make Greek Kappa (`U+03BA`) respond to more serif variants for `k` (`cv36`).
+* Add a top-left serif to GREEK SMALL LETTER HETA (`U+0371`) under slab.
