--- a/changes/28.0.0-alpha.2.md
+++ b/changes/28.0.0-alpha.2.md
@@ -8,6 +8,7 @@
   - Fix `cv64` and `cv65` for `ss07`.
   - Fix `cv66` for `ss17`.
   - Fix `cv81` and `cv82` for `ss03` and `ss08` under italic slab.
+  - Fix `cv93` for `ss01`.
   - Fix `vsAJ` for `ss10`.
   - Fix `vlAB` for `ss09` and `ss14`.
   - Fix `vlAD` for `ss05` and `ss14`.
