some SS fixes (#2096)
* some SS fixes

* cont

--- a/changes/28.0.0-alpha.2.md
+++ b/changes/28.0.0-alpha.2.md
@@ -2,3 +2,13 @@
 * Improve top-left serif for LATIN SMALL LETTER KRA (`U+0138`) to match `k`.
 * Make Greek Kappa (`U+03BA`) respond to more serif variants for `k` (`cv36`).
 * Add a top-left serif to GREEK SMALL LETTER HETA (`U+0371`) under slab.
+* Stylistic set fixes:
+  - Fix `cv10` for `ss01`, `ss02`, and `ss08` under slab.
+  - Fix `cv53` for `ss16`.
+  - Fix `cv64` and `cv65` for `ss07`.
+  - Fix `cv66` for `ss17`.
+  - Fix `cv81` and `cv82` for `ss03` and `ss08` under italic slab.
+  - Fix `cv93` for `ss01`.
+  - Fix `vsAJ` for `ss10`.
+  - Fix `vlAB` for `ss09` and `ss14`.
+  - Fix `vlAD` for `ss05` and `ss14`.
