Add tailless variants for Greek Lower Iota.

--- a/changes/28.0.0-alpha.2.md
+++ b/changes/28.0.0-alpha.2.md
@@ -1,3 +1,4 @@
+* Add tailless variants for Greek Lower Iota (`ι`).
 * Improve serifs for turned k (`U+029E`) to match `q` and turned h (`U+0265`).
 * Improve top-left serif for LATIN SMALL LETTER KRA (`U+0138`) to match `k`.
 * Make Greek Kappa (`U+03BA`) respond to more serif variants for `k` (`cv36`).
