Add several supplemental arrows (MathML, etc.).

--- a/changes/28.0.0-alpha.2.md
+++ b/changes/28.0.0-alpha.2.md
@@ -3,6 +3,12 @@
 * Improve top-left serif for LATIN SMALL LETTER KRA (`U+0138`) to match `k`.
 * Make Greek Kappa (`U+03BA`) respond to more serif variants for `k` (`cv36`).
 * Add a top-left serif to GREEK SMALL LETTER HETA (`U+0371`) under slab.
+* Add Characters:
+  - TRIANGLE-HEADED RIGHTWARDS ARROW (`U+279D`).
+  - LONG RIGHTWARDS SQUIGGLE ARROW (`U+27FF`).
+  - LEFTWARDS DOUBLE ARROW WITH VERTICAL STROKE (`U+2902`) ... LEFT RIGHT DOUBLE ARROW WITH VERTICAL STROKE (`U+2904`).
+  - LONG LEFTWARDS SQUIGGLE ARROW (`U+2B33`).
+  - DOWNWARDS TRIANGLE-HEADED ZIGZAG ARROW (`U+2B4D`).
 * Stylistic set fixes:
   - Fix `cv10` for `ss01`, `ss02`, and `ss08` under slab.
   - Fix `cv53` for `ss16`.
