Thorn With Stroke optimization.

--- a/changes/28.0.0-beta.1.md
+++ b/changes/28.0.0-beta.1.md
@@ -45,6 +45,7 @@
 * Improve top-left serif for LATIN SMALL LETTER KRA (`U+0138`) to match `k`.
 * Make Greek Kappa (`U+03BA`) respond to more serif variants for `k` (`cv36`).
 * Add a top-left serif to GREEK SMALL LETTER HETA (`U+0371`) under slab.
+* Improve vertical alignmant of bowl for LATIN CAPITAL LETTER THORN WITH STROKE (`U+A764`) and LATIN CAPITAL LETTER THORN WITH STROKE THROUGH DESCENDER (`U+A766`).
 * Stylistic set fixes:
   - Fix `cv10` for `ss01`, `ss02`, and `ss08` under slab.
   - Fix `cv53` for `ss16`.
