revert name change

--- a/changes/28.0.0-beta.1.md
+++ b/changes/28.0.0-beta.1.md
@@ -37,7 +37,7 @@
   - TWO DOTS OVER ONE DOT PUNCTUATION (`U+2E2A`) ... FIVE DOT MARK (`U+2E2D`).
   - LATIN SMALL LETTER U WITH LEFT HOOK (`U+AB52`).
   - MODIFIER LETTER SMALL U WITH LEFT HOOK (`U+AB5F`).
-* Add corner-hooked variants for `a` (#2085).
+* Add hook-inward-serifed variants for `a` (#2085).
 * Add double-serifed variants for `a` (#1949).
 * Add bottom-serifed variants for `d`, and `q`.
 * Add bottom-right-serifed variants for `U`.
