Add double-serifed/serifed-tailed variants for `a`/`α`, add bottom{-right}-serifed variants for `d`/`q`/`U`. (#2104)
* Add serif variants for `U`, `a`, `d`, `q`, and `α`

Closes #1949 .

Also change of variant name:

* `a`.`hook-inward-serifed` → `a`.`corner-hooked`

to match `r`.`corner-hooked`.

* revert name change

* Attempt to combat new unused `a` variants.

* cont.

* reshuffle `d` variants for consistency.

--- a/changes/28.0.0-beta.1.md
+++ b/changes/28.0.0-beta.1.md
@@ -38,9 +38,12 @@
   - LATIN SMALL LETTER U WITH LEFT HOOK (`U+AB52`).
   - MODIFIER LETTER SMALL U WITH LEFT HOOK (`U+AB5F`).
 * Add hook-inward-serifed variants for `a` (#2085).
+* Add double-serifed variants for `a` (#1949).
+* Add bottom-serifed variants for `d`, and `q`.
+* Add bottom-right-serifed variants for `U`.
+* Add tailless variants for Greek Lower Iota (`ι`).
 * Remove earless-rounded variants for `U+01A5`, `U+0256`, `U+02A0`, and `U+1D91`.
 * Remove earless-corner variants for `U+027E`.
-* Add tailless variants for Greek Lower Iota (`ι`).
 * Improve serifs for turned k (`U+029E`) to match `q` and turned h (`U+0265`).
 * Improve top-left serif for LATIN SMALL LETTER KRA (`U+0138`) to match `k`.
 * Make Greek Kappa (`U+03BA`) respond to more serif variants for `k` (`cv36`).
