Harmonize italic slab forms for `a`, `g`, and `q`.

--- a/changes/28.0.0-beta.1.md
+++ b/changes/28.0.0-beta.1.md
@@ -38,7 +38,8 @@
   - LATIN SMALL LETTER U WITH LEFT HOOK (`U+AB52`).
   - MODIFIER LETTER SMALL U WITH LEFT HOOK (`U+AB5F`).
 * Add hook-inward-serifed variants for `a` (#2085).
-* Add double-serifed variants for `a` (#1949).
+* Add single-storey-double-serifed and single-storey-tailed-serifed variants for `a` and Greek Lower Alpha (`α`) (#1949).
+  - Make `a`.`single-storey-tailed-serifed` the default for slab italic to match `g` and `q`.
 * Add bottom-serifed variants for `d`, and `q`.
 * Add bottom-right-serifed variants for `U`.
 * Add tailless variants for Greek Lower Iota (`ι`).
