--- a/changes/28.0.0.md
+++ b/changes/28.0.0.md
@@ -25,7 +25,9 @@
   - CYRILLIC CAPITAL LETTER LHA (`U+0514`) ... CYRILLIC SMALL LETTER YAE (`U+0519`) (#2018).
   - GEORGIAN PARAGRAPH SEPARATOR (`U+10FB`).
   - COMBINING BREVE-MACRON (`U+1DCB`) ... COMBINING MACRON-BREVE (`U+1DCC`) (#1880).
+  - COMBINING DOUBLE CIRCUMFLEX ABOVE (`U+1DCD`).
   - COMBINING LATIN SMALL LETTER FLATTENED OPEN A ABOVE (`U+1DD3`).
+  - COMBINING DELETION MARK (`U+1DFB`).
   - LINE SEPARATOR (`U+2028`) ... PARAGRAPH SEPARATOR (`U+2029`).
   - TRIANGLE-HEADED RIGHTWARDS ARROW (`U+279D`).
   - LONG RIGHTWARDS SQUIGGLE ARROW (`U+27FF`).
