Harmonize default iota/tau variants with `i`/`l`.
Also move zshaped `i`/`l`/iota variants to be after hooky/hooky-bottom variants for more consistent serif buildup order.

--- a/changes/28.0.0.md
+++ b/changes/28.0.0.md
@@ -12,7 +12,7 @@
    - `webfont-formats` → `webfontFormats`
 * \[**BREAKING**\] The "SGr" TTC packages for Iosevka Aile and Etoile will no longer be generated, as they are duplicates to the non-SGr TTC packages.
 * \[**BREAKING**\] Reorder of glyph variants:
-   - Influenced characters: `M`, `R`, `f`, `t`, `x`, Long S (`ſ`), Lower Lambda (`λ`), Lower Tau (`τ`), Lower Chi (`χ`), Cyrillic Lower Em (`м`), Cyrillic Lower Ef (`ф`), Cyrillic Ya (`Я`, `я`), `5`.
+   - Influenced characters: `M`, `R`, `f`, `i`, `l`, `t`, `x`, Long S (`ſ`), Lower Lambda (`λ`), Lower Tau (`τ`), Lower Chi (`χ`), Cyrillic Lower Em (`м`), Cyrillic Lower Ef (`ф`), Cyrillic Ya (`Я`, `я`), `5`.
 * \[**BREAKING**\] Tags for variant features for Cyrillic lowercase Er and U are changed to `cv76` and `cv78`.
    - Various other glyph variant tags are also changed to reflect this insertion.
 * \[**BREAKING**\] Make the ligation group names for symbol connections more intuitive, and add alternatives to start chaining from at least 3 continuous characters (#2100):
@@ -45,6 +45,7 @@
 * Add bottom-serifed variants for `d`, and `q`.
 * Add bottom-right-serifed variants for `U`.
 * Add tailless variants for Greek Lower Iota (`ι`).
+* Make Greek Lower Iota (`ι`) and Greek Lower Tau (`τ`) semi-tailed under default upright and tailed under default italic.
 * Remove earless-rounded variants for `U+01A5`, `U+0256`, `U+02A0`, and `U+1D91`.
 * Remove earless-corner variants for `U+027E`.
 * Improve serifs for turned k (`U+029E`) to match `q` and turned h (`U+0265`).
