Add missing feature tag to chaining plus ligation (#2118).

--- a/changes/28.0.1.md
+++ b/changes/28.0.1.md
@@ -1,1 +1,2 @@
 * Add italic form of CYRILLIC SMALL LETTER TE WITH MIDDLE HOOK (`U+A68B`) (#2119).
+* Add missing feature tag to chaining plus ligation (#2118).
