Let serifs of `cyrl/gheMidHook` respond to italics

--- a/changes/28.0.2.md
+++ b/changes/28.0.2.md
@@ -1,1 +1,2 @@
-* Refine shape of Tshe and Cyrillic Capital Letter Te with Middle Hook (#2123).
+* Refine shape of Tshe and Cyrillic Capital Letter Te with Middle Hook (`U+A68A`) (#2123).
+* Remove bottom serif of Cyrillic Small Letter Ghe with Middle Hook (`U+0495`) under italics.
