Optimize serifs of several extended cyrl letters.

--- a/changes/28.0.2.md
+++ b/changes/28.0.2.md
@@ -1,2 +1,4 @@
 * Refine shape of Tshe and Cyrillic Capital Letter Te with Middle Hook (`U+A68A`) (#2123).
 * Remove bottom serif of Cyrillic Small Letter Ghe with Middle Hook (`U+0495`) under italics.
+* Make serif variants of Cyrillic Small Letter Tall Te (`U+1C84`) respond to italics.
+* Make terminal serif behavior of palatalized Komi consonants (`U+0502`...`U+0505`, `U+0508`..`U+050F`) more consistent with each other.
