--- a/changes/28.0.2.md
+++ b/changes/28.0.2.md
@@ -1,4 +1,6 @@
 * Refine shape of Tshe and Cyrillic Capital Letter Te with Middle Hook (`U+A68A`) (#2123).
 * Remove bottom serif of Cyrillic Small Letter Ghe with Middle Hook (`U+0495`) under italics.
 * Make serif variants of Cyrillic Small Letter Tall Te (`U+1C84`) respond to italics.
-* Make terminal serif behavior of palatalized Komi consonants (`U+0502`...`U+0505`, `U+0508`..`U+050F`) more consistent with each other.
+* Make terminal serif behavior of palatalized Komi consonants (`U+0502`...`U+0505`, `U+0508`...`U+050F`) more consistent with each other.
+* Refine serifs of Turned M (`U+019C`, `U+026F`, `U+0270`, `U+1D1F`, `U+1D5A`, `U+1DAD`), Cyrillic Sha (`U+0448`, `U+2DF2`, `U+1E046`, `U+1E064`), and Cyrillic Shcha (`U+0449`, `U+2DF3`) under monospace.
+  - As a consequence, serifed and motion-serifed variants will look identical under monospace.
