* Add characters:   - LATIN CAPITAL LETTER AU (`U+A736`) (#1689).   - LATIN SMALL LETTER AU (`U+A737`) (#1689).

--- a/changes/28.0.2.md
+++ b/changes/28.0.2.md
@@ -1,3 +1,6 @@
+* Add characters:
+  - LATIN CAPITAL LETTER AU (`U+A736`) (#1689).
+  - LATIN SMALL LETTER AU (`U+A737`) (#1689).
 * Refine shape of Tshe and Cyrillic Capital Letter Te with Middle Hook (`U+A68A`) (#2123).
 * Remove bottom serif of Cyrillic Small Letter Ghe with Middle Hook (`U+0495`) under italics.
 * Make serif variants of Cyrillic Small Letter Tall Te (`U+1C84`) respond to italics.
