Fix slash ligations when `frac` feature is enabled (#2130).

--- a/changes/28.0.3.md
+++ b/changes/28.0.3.md
@@ -1,1 +1,2 @@
 * Remove tailless variants for Latin Iota (`U+0196`, `U+0269`) and Cyrillic Iota (`U+A646`, `U+A647`).
+* Fix slash ligations when `frac` feature is enabled (#2130).
