--- a/changes/28.0.3.md
+++ b/changes/28.0.3.md
@@ -5,3 +5,4 @@
   - LATIN SMALL LETTER P WITH STROKE THROUGH DESCENDER (`U+A751`) (#1797).
 * Remove tailless variants for Latin Iota (`U+0196`, `U+0269`) and Cyrillic Iota (`U+A646`, `U+A647`).
 * Fix slash ligations when `frac` feature is enabled (#2130).
+* Fix leaning marks of turned `r` (#2133).
