--- a/changes/28.0.3.md
+++ b/changes/28.0.3.md
@@ -1,5 +1,7 @@
 * Add characters:
   - COMBINING SUSPENSION MARK (`U+1DC3`).
+  - FROWN (`U+2322`).
+  - SMILE (`U+2323`).
   - CIRCLE WITH HORIZONTAL BAR (`U+29B5`).
   - LATIN CAPITAL LETTER P WITH STROKE THROUGH DESCENDER (`U+A750`) (#1797).
   - LATIN SMALL LETTER P WITH STROKE THROUGH DESCENDER (`U+A751`) (#1797).
