--- a/changes/28.0.4.md
+++ b/changes/28.0.4.md
@@ -1,1 +1,1 @@
-* Make Etoile use `r`=`compact-serifed` under Upright and `r`=`compact-top-serifed` under Italic.
+* Make Etoile use `r`=`hookless-serifed` under Upright and `r`=`hookless-top-serifed` under Italic.
