--- a/changes/28.0.4.md
+++ b/changes/28.0.4.md
@@ -1,2 +1,3 @@
 * Fix leaning marks of turned capital F/L (#2137).
 * Fix overlay bar placement of Z with Hook and Z with Swash Tail (#2141).
+* Fix attachment of descender parts of Cyrillic Lower Ha/X under `x` = `cursive` (#2142).
