--- a/changes/28.0.4.md
+++ b/changes/28.0.4.md
@@ -2,3 +2,4 @@
 * Fix overlay bar placement of Z with Hook and Z with Swash Tail (#2141).
 * Fix attachment of descender parts of Cyrillic Lower Ha/X under `x` = `cursive` (#2142).
 * Make the Eng part in LATIN SMALL LETTER FENG DIGRAPH always connected to the f part (#2143).
+* Fix top bar shape in CYRILLIC CAPITAL LETTER DJE (#2145).
