Make Cyrillic Lower Zhe cursive under Slab Italic.

--- a/changes/28.0.4.md
+++ b/changes/28.0.4.md
@@ -3,3 +3,4 @@
 * Fix attachment of descender parts of Cyrillic Lower Ha/X under `x` = `cursive` (#2142).
 * Make the Eng part in LATIN SMALL LETTER FENG DIGRAPH always connected to the f part (#2143).
 * Fix top bar shape in CYRILLIC CAPITAL LETTER DJE (#2145).
+* Make Cyrillic Lower Zhe (`ж`) use `cursive` under Slab Italic.
