Add untagged variant selector for cyrl-capital-ef.

--- a/changes/28.0.5.md
+++ b/changes/28.0.5.md
@@ -1,3 +1,4 @@
+* Add untagged variant selector for Cyrillic Capital Ef (`Ф`) for style-driven variation.
 * Fix leaning marks of Turned/Reversed Sans-Serif Capital L.
 * Fix leaning marks of Cyrillic Tall Te.
 * Fix leaning marks of Greek Lower Mu/Rho.
