* Add characters:   - LIGHTNING (`U+2607`) (#2158).   - SUBSET WITH DOT (`U+2ABD`).   - SUPERSET WITH DOT (`U+2ABE`). *  `APLF` feature will apply to all [Uiua](https://www.uiua.org/) operators.

--- a/changes/28.0.5.md
+++ b/changes/28.0.5.md
@@ -1,4 +1,9 @@
+* Add characters:
+  - LIGHTNING (`U+2607`) (#2158).
+  - SUBSET WITH DOT (`U+2ABD`).
+  - SUPERSET WITH DOT (`U+2ABE`).
 * Add untagged variant selector for Cyrillic Capital Ef (`Ф`) for style-driven variation.
 * Fix leaning marks of Turned/Reversed Sans-Serif Capital L.
 * Fix leaning marks of Cyrillic Tall Te.
 * Fix leaning marks of Greek Lower Mu/Rho.
+* `APLF` feature will apply to all [Uiua](https://www.uiua.org/) operators.
