--- a/changes/28.0.5.md
+++ b/changes/28.0.5.md
@@ -3,6 +3,7 @@
   - SUBSET WITH DOT (`U+2ABD`).
   - SUPERSET WITH DOT (`U+2ABE`).
 * Add untagged variant selector for Cyrillic Capital Ef (`Ф`) for style-driven variation.
+* Allow turned h (`ɥ`) and turned m with long leg (`ɰ`) to use toothless-corner variants.
 * Fix leaning marks of Turned/Reversed Sans-Serif Capital L.
 * Fix leaning marks of Cyrillic Tall Te.
 * Fix leaning marks of Greek Lower Mu/Rho.
