--- a/changes/28.0.6.md
+++ b/changes/28.0.6.md
@@ -1,1 +1,2 @@
 * Fix application of `APLF` for several [Uiua](https://www.uiua.org/) operators.
+* Adjust serif shapes for lowercase italic Yeri glyphs with corner body shape (#2151).
