--- a/changes/28.0.7.md
+++ b/changes/28.0.7.md
@@ -1,2 +1,3 @@
 * Make superscript/subscript/overscript Cyrillic characters obey localization forms of base letters (#2177).
 * Add IPA localization forms for Greek Lower Beta (`β`) and Chi (`χ`).
+* Add APLF variants for `U+25F0`, `U+25F3`, and `U+25F4`.
