Make `cyrl/ue` and `latn/gamma` respond to italics

--- a/changes/28.0.7.md
+++ b/changes/28.0.7.md
@@ -2,3 +2,4 @@
 * Add IPA localization forms for Greek Lower Beta (`β`) and Chi (`χ`).
 * Add APLF variants for `U+25F0`, `U+25F3`, and `U+25F4`.
 * Fix serif form for Cyrillic Lower Tall / Iotified Yat (#2178).
+* Make top serifs of Cyrillic Lower Straight U (`ү`, `ұ`) and Latin Lower Gamma (`ɣ`) respond to italics.
