Make Ezh follow variants of `Z`/`z` (#1957).

--- a/changes/28.0.7.md
+++ b/changes/28.0.7.md
@@ -1,5 +1,6 @@
 * Make superscript/subscript/overscript Cyrillic characters obey localization forms of base letters (#2177).
 * Add IPA localization forms for Greek Lower Beta (`β`) and Chi (`χ`).
 * Add APLF variants for `U+25F0`, `U+25F3`, and `U+25F4`.
+* Make Ezh follow variants of `Z`/`z` (#1957).
 * Fix serif form for Cyrillic Lower Tall / Iotified Yat (#2178).
 * Make top serifs of Cyrillic Lower Straight U (`ү`, `ұ`) and Latin Lower Gamma (`ɣ`) respond to italics.
