--- a/changes/28.0.7.md
+++ b/changes/28.0.7.md
@@ -5,5 +5,7 @@
 * Fix serif form for Cyrillic Lower Tall / Iotified Yat (#2178).
 * Make top serifs of Cyrillic Lower Straight U (`ү`, `ұ`) and Latin Lower Gamma (`ɣ`) respond to italics.
 * Fix leaning marks of Capital Turned/Half H (`U+2C75`, `U+2C76`, `U+A78D`, `U+A7F5`, `U+A7F6`).
+* Fix leaning marks of Wynn (`U+01BF`, `U+01F7`).
 * Fix leaning marks of Insular R (`U+A782`, `U+A783`).
 * Fix leaning marks of Greek/Latin Beta (`U+03B2`, `U+A7B4`, `U+A7B5`).
+* Fix leaning marks of Greek Lower San (`U+03FB`).
