some terminal chars

--- a/changes/28.1.0.md
+++ b/changes/28.1.0.md
@@ -1,1 +1,8 @@
+* Add characters:
+  - LEFT VERTICAL BOX LINE (`U+23B8`) ... HORIZONTAL SCAN LINE-9 (`U+23BD`).
+  - SQUARE FOUR CORNERS (`U+26F6`).
+  - TWO JOINED SQUARES (`U+29C9`).
+  - OVERLAPPING WHITE SQUARES (`U+2BBA`).
+  - OVERLAPPING WHITE AND BLACK SQUARES (`U+2BBB`).
+  - OVERLAPPING BLACK SQUARES (`U+2BBC`).
 * Fix metrics of Cyrillic Yery (#2182).
