Add italic form for Combining Cyrillic Letter Es-Te (U+2DF5) (#2187).

--- a/changes/28.1.0.md
+++ b/changes/28.1.0.md
@@ -6,3 +6,4 @@
   - OVERLAPPING WHITE AND BLACK SQUARES (`U+2BBB`).
   - OVERLAPPING BLACK SQUARES (`U+2BBC`).
 * Fix metrics of Cyrillic Yery (#2182).
+* Add italic form for Combining Cyrillic Letter Es-Te (U+2DF5) (#2187).
