Fix cyrl_srb locl forms, add cyrl_bos locl forms.

--- a/changes/28.1.0.md
+++ b/changes/28.1.0.md
@@ -6,4 +6,6 @@
   - OVERLAPPING WHITE AND BLACK SQUARES (`U+2BBB`).
   - OVERLAPPING BLACK SQUARES (`U+2BBC`).
 * Fix metrics of Cyrillic Yery (#2182).
+* Fix Italic/Upright localization forms for Serbian/Macedonian Cyrillic.
+* Add Bosnian Cyrillic localization forms based on Serbian/Macedonian.
 * Add italic form for Combining Cyrillic Letter Es-Te (U+2DF5) (#2187).
