--- a/changes/28.1.0.md
+++ b/changes/28.1.0.md
@@ -5,6 +5,9 @@
   - OVERLAPPING WHITE SQUARES (`U+2BBA`).
   - OVERLAPPING WHITE AND BLACK SQUARES (`U+2BBB`).
   - OVERLAPPING BLACK SQUARES (`U+2BBC`).
+  - OUTLINED LATIN CAPITAL LETTER A (`U+1CCD6`) ... OUTLINED LATIN CAPITAL LETTER Z (`U+1CCEF`) (Purposed for Unicode 16; L2/21-235).
+  - OUTLINED DIGIT ZERO (`U+1CCF0`) ... OUTLINED DIGIT NINE (`U+1CCF9`) (Purposed for Unicode 16; L2/21-235).
+  - BLOCK OCTANT-3 (`U+1CD00`) ... BLOCK OCTANT-2345678 (`U+1CDE5`) (Purposed for Unicode 16; L2/21-235).
 * Fix metrics of Cyrillic Yery (#2182).
 * Fix Italic/Upright localization forms for Serbian/Macedonian Cyrillic.
 * Add Bosnian Cyrillic localization forms based on Serbian/Macedonian.
