--- a/changes/28.1.0.md
+++ b/changes/28.1.0.md
@@ -8,8 +8,7 @@
   - OUTLINED LATIN CAPITAL LETTER A (`U+1CCD6`) ... OUTLINED LATIN CAPITAL LETTER Z (`U+1CCEF`) (Purposed for Unicode 16; L2/21-235).
   - OUTLINED DIGIT ZERO (`U+1CCF0`) ... OUTLINED DIGIT NINE (`U+1CCF9`) (Purposed for Unicode 16; L2/21-235).
   - BLOCK OCTANT-3 (`U+1CD00`) ... BLOCK OCTANT-2345678 (`U+1CDE5`) (Purposed for Unicode 16; L2/21-235).
-  - LEFT HALF TRIPLE DASH HORIZONTAL (`U+1CE0D`) ... BOX DRAWINGS LIGHT VERTICAL AND
-BOTTOM LEFT (`U+1CE19`) (Purposed for Unicode 16; L2/21-235).
+  - LEFT HALF TRIPLE DASH HORIZONTAL (`U+1CE0D`) ... LARGE TYPE PIECE STEM-12 (`U+1CE50`) (Purposed for Unicode 16; L2/21-235).
 * Fix metrics of Cyrillic Yery (#2182).
 * Fix Italic/Upright localization forms for Serbian/Macedonian Cyrillic.
 * Add Bosnian Cyrillic localization forms based on Serbian/Macedonian.
