`zero` feature will apply to composites (#2191).

--- a/changes/28.1.0.md
+++ b/changes/28.1.0.md
@@ -13,3 +13,4 @@
 * Fix Italic/Upright localization forms for Serbian/Macedonian Cyrillic.
 * Add Bosnian Cyrillic localization forms based on Serbian/Macedonian.
 * Add italic form for Combining Cyrillic Letter Es-Te (U+2DF5) (#2187).
+* `zero` feature will apply to composites (#2191).
