--- a/changes/29.0.0.md
+++ b/changes/29.0.0.md
@@ -1,5 +1,4 @@
-* \[**BREAKING**\] Add separate serifed variants for digits `2` through `5`. As a result, current variants are reordered (#1965).
-* \[**Breaking**\] Change of variant names:
+* \[**BREAKING**\] Add separate serifed variants for digits `2` through `5`. As a result, current variants are reordered (#1965). Change of variant names:
   - `two`.`straight-neck` → `two`.`straight-neck-serifless`
   - `two`.`curly-neck` → `two`.`curly-neck-serifless`
   - `three`.`flat-top` → `three`.`flat-top-serifless`
@@ -13,3 +12,4 @@
   - `five`.`upright-flat` → `five`.`upright-flat-serifless`
   - `five`.`oblique-arched` → `five`.`oblique-arched-serifless`
   - `five`.`oblique-flat` → `five`.`oblique-flat-serifless`
+* Fix a disjoint stroke of Outlined Curly `Z` under some weights (#2195).
