--- a/changes/29.0.0.md
+++ b/changes/29.0.0.md
@@ -12,4 +12,17 @@
   - `five`.`upright-flat` → `five`.`upright-flat-serifless`
   - `five`.`oblique-arched` → `five`.`oblique-arched-serifless`
   - `five`.`oblique-flat` → `five`.`oblique-flat-serifless`
+* Add characters:
+  - LOWER HORIZONTAL RULER SEGMENT (U+1CC05)  (Purposed for Unicode 16; L2/21-235).
+  - RIGHT VERTICAL RULER SEGMENT (U+1CC06)  (Purposed for Unicode 16; L2/21-235).
+  - LOWER RIGHT RULER SEGMENT (U+1CC07)  (Purposed for Unicode 16; L2/21-235).
+  - BOX DRAWINGS LIGHT HORIZONTAL AND UPPER RIGHT (U+1CC1B) ... BOX DRAWINGS LIGHT BOTTOM AND LOWER LEFT (U+1CC1E)  (Purposed for Unicode 16; L2/21-235).
+  - BLACK NEUTRAL FACE (U+1CC6F)  (Purposed for Unicode 16; L2/21-235).
+  - VERTICAL LINE WITH FOUR TICK MARKS (U+1CC90)  (Purposed for Unicode 16; L2/21-235).
+  - HORIZONTAL LINE WITH FOUR TICK MARKS (U+1CC91)  (Purposed for Unicode 16; L2/21-235).
+  - UPPER LEFT ONE SIXTEENTH BLOCK (U+1CE90) ... LOWER HALF RIGHT ONE QUARTER BLOCK (U+1CEAF)  (Purposed for Unicode 16; L2/21-235).
+  - NEGATIVE SQUARED LEFTWARDS ARROW (U+1F8B4) ... NEGATIVE SQUARED DOWNWARDS ARROW (U+1F8B7)  (Purposed for Unicode 16; L2/21-235).
+  - LEFT TWO THIRDS BLOCK (U+1FBCE)  (Purposed for Unicode 16; L2/21-235).
+  - LEFT ONE THIRD BLOCK (U+1FBCF)  (Purposed for Unicode 16; L2/21-235).
+  - UPPER CENTRE ONE QUARTER BLOCK (U+1FBE4) ... MIDDLE RIGHT ONE QUARTER BLOCK (U+1FBE7)  (Purposed for Unicode 16; L2/21-235).
 * Fix a disjoint stroke of Outlined Curly `Z` under some weights (#2195).
