--- a/changes/29.0.0.md
+++ b/changes/29.0.0.md
@@ -26,3 +26,4 @@
   - LEFT ONE THIRD BLOCK (U+1FBCF)  (Purposed for Unicode 16; L2/21-235).
   - UPPER CENTRE ONE QUARTER BLOCK (U+1FBE4) ... MIDDLE RIGHT ONE QUARTER BLOCK (U+1FBE7)  (Purposed for Unicode 16; L2/21-235).
 * Fix a disjoint stroke of Outlined Curly `Z` under some weights (#2195).
+* Unify diagonal box drawings' angles (#2197).
