Reorder `U`/`u` variants in ascending buildup order.

--- a/changes/29.0.0.md
+++ b/changes/29.0.0.md
@@ -12,6 +12,8 @@
   - `five`.`upright-flat` → `five`.`upright-flat-serifless`
   - `five`.`oblique-arched` → `five`.`oblique-arched-serifless`
   - `five`.`oblique-flat` → `five`.`oblique-flat-serifless`
+* \[**BREAKING**\] Reorder of glyph variants:
+   - Influenced characters: `U`, `u`, Greek Lower Mu (`μ`), Micro Sign (`µ`).
 * Add characters:
   - UPWARDS WHITE ARROW FROM BAR (`U+21EA`) ... RIGHTWARDS WHITE ARROW FROM WALL (`U+21F0`).
   - RETURN SYMBOL (`U+23CE`).
