arrows and stuff

--- a/changes/29.0.0.md
+++ b/changes/29.0.0.md
@@ -22,17 +22,19 @@
   - RIGHT VERTICAL RULER SEGMENT (`U+1CC06`)  (Purposed for Unicode 16; L2/21-235).
   - LOWER RIGHT RULER SEGMENT (`U+1CC07`)  (Purposed for Unicode 16; L2/21-235).
   - BOX DRAWINGS LIGHT HORIZONTAL AND UPPER RIGHT (`U+1CC1B`) ... BOX DRAWINGS LIGHT BOTTOM AND LOWER LEFT (`U+1CC1E`)  (Purposed for Unicode 16; L2/21-235).
-  - BOX DRAWINGS LIGHT DIAGONAL UPPER LEFT TO MIDDLE CENTRE TO UPPER RIGHT (`U+1FBD8`) ... BOX DRAWINGS LIGHT DIAGONAL UPPER LEFT TO MIDDLE CENTRE TO LOWER LEFT (`U+1FBDB`)  (Purposed for Unicode 16; L2/21-235).
   - SEPARATED BLOCK QUADRANT-1 (`U+1CC21`) ... SEPARATED BLOCK QUADRANT-1234 (`U+1CC2F`)  (Purposed for Unicode 16; L2/21-235).
   - BLACK NEUTRAL FACE (`U+1CC6F`)  (Purposed for Unicode 16; L2/21-235).
   - VERTICAL LINE WITH FOUR TICK MARKS (`U+1CC90`)  (Purposed for Unicode 16; L2/21-235).
   - HORIZONTAL LINE WITH FOUR TICK MARKS (`U+1CC91`)  (Purposed for Unicode 16; L2/21-235).
+  - BOX DRAWINGS DOUBLE DIAGONAL LOWER LEFT TO MIDDLE CENTRE TO LOWER RIGHT (`U+1CE09`)  (Purposed for Unicode 16; L2/21-235).
+  - BOX DRAWINGS DOUBLE DIAGONAL UPPER LEFT TO MIDDLE CENTRE TO UPPER RIGHT (`U+1CE0A`)  (Purposed for Unicode 16; L2/21-235).
   - SEPARATED BLOCK SEXTANT-1 (`U+1CE51`) ... SEPARATED BLOCK SEXTANT-123456 (`U+1CE8F`)  (Purposed for Unicode 16; L2/21-235).
   - UPPER LEFT ONE SIXTEENTH BLOCK (`U+1CE90`) ... LOWER HALF RIGHT ONE QUARTER BLOCK (`U+1CEAF`)  (Purposed for Unicode 16; L2/21-235).
   - FOLDER (`U+1F5C0`) (#2181).
-  - NEGATIVE SQUARED LEFTWARDS ARROW (`U+1F8B4`) ... NEGATIVE SQUARED DOWNWARDS ARROW (`U+1F8B7`)  (Purposed for Unicode 16; L2/21-235).
+  - DOWNWARDS BLACK ARROW TO BAR (`U+1F8B3`) ... SOUTH WEST ARROW FROM BAR (`U+1F8BB`)  (Purposed for Unicode 16; L2/21-235).
   - LEFT TWO THIRDS BLOCK (`U+1FBCE`)  (Purposed for Unicode 16; L2/21-235).
   - LEFT ONE THIRD BLOCK (`U+1FBCF`)  (Purposed for Unicode 16; L2/21-235).
+  - BOX DRAWINGS LIGHT DIAGONAL MIDDLE RIGHT TO LOWER LEFT (`U+1FBD0`) ... BOX DRAWINGS LIGHT DIAGONAL UPPER LEFT TO MIDDLE RIGHT TO LOWER LEFT (`U+1FBDF`)  (Purposed for Unicode 16; L2/21-235).
   - UPPER CENTRE ONE QUARTER BLOCK (`U+1FBE4`) ... MIDDLE RIGHT ONE QUARTER BLOCK (`U+1FBE7`)  (Purposed for Unicode 16; L2/21-235).
 * Fix a disjoint stroke of Outlined Curly `Z` under some weights (#2195).
 * Unify diagonal box drawings' angles (#2197).
