--- a/changes/29.0.0.md
+++ b/changes/29.0.0.md
@@ -36,3 +36,4 @@
   - UPPER CENTRE ONE QUARTER BLOCK (`U+1FBE4`) ... MIDDLE RIGHT ONE QUARTER BLOCK (`U+1FBE7`)  (Purposed for Unicode 16; L2/21-235).
 * Fix a disjoint stroke of Outlined Curly `Z` under some weights (#2195).
 * Unify diagonal box drawings' angles (#2197).
+* Fix Large Type Piece `U+1CE3B` (#2206).
