--- a/changes/29.0.0.md
+++ b/changes/29.0.0.md
@@ -36,6 +36,7 @@
   - LEFT ONE THIRD BLOCK (`U+1FBCF`)  (Purposed for Unicode 16; L2/21-235).
   - BOX DRAWINGS LIGHT DIAGONAL MIDDLE RIGHT TO LOWER LEFT (`U+1FBD0`) ... BOX DRAWINGS LIGHT DIAGONAL UPPER LEFT TO MIDDLE RIGHT TO LOWER LEFT (`U+1FBDF`)  (Purposed for Unicode 16; L2/21-235).
   - UPPER CENTRE ONE QUARTER BLOCK (`U+1FBE4`) ... MIDDLE RIGHT ONE QUARTER BLOCK (`U+1FBE7`)  (Purposed for Unicode 16; L2/21-235).
+* Quasi-proportional will now use a six-unit system instead of four. Metrics of various letters (`f`, `t`, `r`, `m`, `w`, etc.) are adjusted.
 * Fix a disjoint stroke of Outlined Curly `Z` under some weights (#2195).
 * Unify diagonal box drawings' angles (#2197).
 * Fix Large Type Piece `U+1CE3B` (#2206).
