Added a `MOSC` feature that turns certain geometric shapes into mosaics (#2212).

--- a/changes/29.0.0.md
+++ b/changes/29.0.0.md
@@ -40,3 +40,4 @@
 * Fix a disjoint stroke of Outlined Curly `Z` under some weights (#2195).
 * Unify diagonal box drawings' angles (#2197).
 * Fix Large Type Piece `U+1CE3B` (#2206).
+* Added a `MOSC` feature that turns certain geometric shapes into mosaics (#2212).
