Fix `frac` feature for better recognizing fraction patterns (#2214).

--- a/changes/29.0.0.md
+++ b/changes/29.0.0.md
@@ -41,3 +41,4 @@
 * Unify diagonal box drawings' angles (#2197).
 * Fix Large Type Piece `U+1CE3B` (#2206).
 * Added a `MOSC` feature that turns certain geometric shapes into mosaics (#2212).
+* Fix `frac` feature for better recognizing fraction patterns (#2214).
