--- a/changes/29.0.0-beta.1.md
+++ b/changes/29.0.0-beta.1.md
@@ -14,6 +14,7 @@
   - `five`.`oblique-flat` → `five`.`oblique-flat-serifless`
 * \[**BREAKING**\] Reorder of glyph variants:
    - Influenced characters: `I`, `U`, `Z`, `i`, `l`, `u`, `z`, Greek Lower Mu (`μ`), Micro Sign (`µ`).
+* \[**BREAKING**\] Quasi-proportional will now use a six-unit system instead of four. Metrics of various letters (`f`, `t`, `r`, `m`, `w`, etc.) are adjusted.
 * Add characters:
   - UPWARDS WHITE ARROW FROM BAR (`U+21EA`) ... RIGHTWARDS WHITE ARROW FROM WALL (`U+21F0`).
   - RETURN SYMBOL (`U+23CE`).
@@ -36,7 +37,6 @@
   - LEFT ONE THIRD BLOCK (`U+1FBCF`)  (Purposed for Unicode 16; L2/21-235).
   - BOX DRAWINGS LIGHT DIAGONAL MIDDLE RIGHT TO LOWER LEFT (`U+1FBD0`) ... BOX DRAWINGS LIGHT DIAGONAL UPPER LEFT TO MIDDLE RIGHT TO LOWER LEFT (`U+1FBDF`)  (Purposed for Unicode 16; L2/21-235).
   - UPPER CENTRE ONE QUARTER BLOCK (`U+1FBE4`) ... MIDDLE RIGHT ONE QUARTER BLOCK (`U+1FBE7`)  (Purposed for Unicode 16; L2/21-235).
-* Quasi-proportional will now use a six-unit system instead of four. Metrics of various letters (`f`, `t`, `r`, `m`, `w`, etc.) are adjusted.
 * Fix a disjoint stroke of Outlined Curly `Z` under some weights (#2195).
 * Unify diagonal box drawings' angles (#2197).
 * Fix Large Type Piece `U+1CE3B` (#2206).
