--- a/changes/29.0.0-beta.2.md
+++ b/changes/29.0.0-beta.2.md
@@ -1,1 +1,11 @@
+* Add characters:
+  - THREE-D TOP-LIGHTED RIGHTWARDS ARROWHEAD (`U+27A2`).
+  - THREE-D BOTTOM-LIGHTED RIGHTWARDS ARROWHEAD (`U+27A3`).
+  - LEFT RAISED OMISSION BRACKET (`U+2E0C`).
+  - RIGHT RAISED OMISSION BRACKET (`U+2E0C`).
+  - LEFT LOW PARAPHRASE BRACKET (`U+2E1C`).
+  - RIGHT LOW PARAPHRASE BRACKET (`U+2E1C`).
+  - NO ONE UNDER EIGHTEEN SYMBOL (`U+1F51E`).
+  - BLACK HEART (`U+1F5A4`).
+  - RAISED LEFT SMALL SQUARE BRACKET (`U+1FBCC`)  (Proposed for Unicode 16; L2/21-235).
 * Increase weight for `U+276E`/`U+276F` (#2217).
