Fix ligation for `[|]` (#2221).

--- a/changes/29.0.0-beta.2.md
+++ b/changes/29.0.0-beta.2.md
@@ -22,3 +22,4 @@
   - BLACK LEFT-POINTING TRIANGLE (`U+25C0`).
 * Fix broken shape of `U+1FB95`, `U+1FB96` and `U+1FB97` (#2218). 
 * Increase weight for `U+276E`/`U+276F` (#2217).
+* Fix ligation for `[|]` (#2221).
