--- a/changes/29.0.0.md
+++ b/changes/29.0.0.md
@@ -24,6 +24,12 @@
   - MAP SYMBOL FOR LIGHTHOUSE (`U+26EF`).
   - THREE-D TOP-LIGHTED RIGHTWARDS ARROWHEAD (`U+27A2`).
   - THREE-D BOTTOM-LIGHTED RIGHTWARDS ARROWHEAD (`U+27A3`).
+  - SHUFFLE PRODUCT (`U+29E2`).
+  - GLEICH STARK (`U+29E6`).
+  - INTERIOR PRODUCT (`U+2A3C`).
+  - RIGHTHAND INTERIOR PRODUCT (`U+2A3D`).
+  - SHORT LEFT TACK (`U+2ADE`) ... SHORT UP TACK (`U+2AE0`).
+  - VERTICAL BAR TRIPLE RIGHT TURNSTILE (`U+2AE2`) ... REVERSED DOUBLE STROKE NOT SIGN (`U+2AED`).
   - UPWARDS WHITE ARROW FROM BAR WITH HORIZONTAL BAR (`U+2BB8`).
   - LEFT RAISED OMISSION BRACKET (`U+2E0C`).
   - RIGHT RAISED OMISSION BRACKET (`U+2E0C`).
