Make Gha respond to `q` variants, demote `ɿ`.

--- a/changes/29.0.3.md
+++ b/changes/29.0.3.md
@@ -1,1 +1,3 @@
 * Fix height of block quadrants (`U+2596`..`U+259F`) (#2240).
+* Make LATIN {CAPITAL|SMALL} LETTER GHA (`U+01A2`..`U+01A3`) respond to variants of `q` (`cv41`).
+* Make the behavior of serifs of `U+027F` automatic.
