Fix width of `U+2008` and `U+29E2`.

--- a/changes/29.0.3.md
+++ b/changes/29.0.3.md
@@ -1,3 +1,5 @@
 * Fix height of block quadrants (`U+2596`..`U+259F`) (#2240).
 * Make LATIN {CAPITAL|SMALL} LETTER GHA (`U+01A2`..`U+01A3`) respond to variants of `q` (`cv41`).
 * Make the behavior of serifs of `U+027F` automatic.
+* Fix side bearings of `U+29E2` under Quasi-Proportional.
+* Fix width of PUNCTUATION SPACE (`U+2008`) under Quasi-Proportional.
