--- a/changes/29.0.3.md
+++ b/changes/29.0.3.md
@@ -1,4 +1,6 @@
 * Fix height of block quadrants (`U+2596`..`U+259F`) (#2240).
+* Fix the design of the ESTIMATED SYMBOL (`U+212E`) to match its spec (#2243).
+* Refine design of POWER SYMBOL (`U+23FB`) and HEAVY CHECK MARK (`U+2714`) (#2243).
 * Make LATIN {CAPITAL|SMALL} LETTER GHA (`U+01A2`..`U+01A3`) respond to variants of `q` (`cv41`).
 * Make the behavior of serifs of `U+027F` automatic.
 * Fix side bearings of `U+29E2` under Quasi-Proportional.
