--- a/changes/29.0.3.md
+++ b/changes/29.0.3.md
@@ -7,3 +7,4 @@
 * Fix side bearings of `U+29E2` under Quasi-Proportional.
 * Fix width of PUNCTUATION SPACE (`U+2008`) under Quasi-Proportional.
 * Fix `percent`=`dots` glyphs for PER {MILLE|TEN THOUSAND} SIGN (`U+2030`..`U+2031`) under Quasi-Proportional when `NWID` is enabled.
+* Remove untagged variant selector for Cyrillic Capital Ef (`Ф`).
