fix `7` for `ss08` under slab.

--- a/changes/29.0.3.md
+++ b/changes/29.0.3.md
@@ -9,3 +9,4 @@
 * Fix `percent`=`dots` glyphs for PER {MILLE|TEN THOUSAND} SIGN (`U+2030`..`U+2031`) under Quasi-Proportional when `NWID` is enabled.
 * Remove untagged variant selector for Cyrillic Capital Ef (`Ф`).
 * Fix glyph visual for COMBINING DOUBLE CIRCUMFLEX ABOVE (`U+1DCD`).
+* Fix variant assignment of `cv92` for `ss08` under slab.
