c-like hyphen chain optimization.

--- a/changes/29.0.3.md
+++ b/changes/29.0.3.md
@@ -10,3 +10,4 @@
 * Remove untagged variant selector for Cyrillic Capital Ef (`Ф`).
 * Fix glyph visual for COMBINING DOUBLE CIRCUMFLEX ABOVE (`U+1DCD`).
 * Fix variant assignment of `cv92` for `ss08` under slab.
+* Make `--c-like-chaining--` ligation group require at least three hyphen-minuses for hyphen chain.
