--- a/changes/29.0.5.md
+++ b/changes/29.0.5.md
@@ -5,3 +5,7 @@
   - CIRCLE WITH HORIZONTAL BAR (`U+29B5`).
   - SOLIDUS WITH OVERBAR (`U+29F6`).
   - SMALL VEE WITH UNDERBAR (`U+2A61`).
+* Add characters:
+  - LOWER RIGHT CORNER WITH DOT (`U+27D3`).
+  - UPPER LEFT CORNER WITH DOT (`U+27D4`).
+* Add APL form for WHITE DIAMOND (`U+25C7`).
