Improve glyph visuals for 7 chars, add 2 new chars + 1 APL form. (#2264)
* Fix glyph visuals for several math characters.

* Add characters for UIUA.

--- a/changes/29.0.5.md
+++ b/changes/29.0.5.md
@@ -1,1 +1,11 @@
 * Fix side bearings of multi-dot punctuation (`U+10FB`, `U+2056`, `U+2058`..`205B`, `U+2E2A`..`U+2E2D`) under Quasi-Proportional.
+* Fix glyph visuals:
+  - MATHEMATICAL RISING DIAGONAL (`U+27CB`).
+  - MATHEMATICAL FALLING DIAGONAL (`U+27CD`).
+  - CIRCLE WITH HORIZONTAL BAR (`U+29B5`).
+  - SOLIDUS WITH OVERBAR (`U+29F6`).
+  - SMALL VEE WITH UNDERBAR (`U+2A61`).
+* Add characters:
+  - LOWER RIGHT CORNER WITH DOT (`U+27D3`).
+  - UPPER LEFT CORNER WITH DOT (`U+27D4`).
+* Add APL form for WHITE DIAMOND (`U+25C7`).
