dense fills are swapped

--- a/changes/29.0.5.md
+++ b/changes/29.0.5.md
@@ -1,4 +1,5 @@
 * Fix side bearings of multi-dot punctuation (`U+10FB`, `U+2056`, `U+2058`..`205B`, `U+2E2A`..`U+2E2D`) under Quasi-Proportional.
+* Fix mapping of DENSE VERTICAL FILL (`U+1CC44`) and DENSE HORIZONTAL FILL (`U+1CC45`).
 * Fix glyph visuals:
   - MATHEMATICAL RISING DIAGONAL (`U+27CB`).
   - MATHEMATICAL FALLING DIAGONAL (`U+27CD`).
