apl for white diamond is not proposed for unicode 16.0.

--- a/changes/29.0.5.md
+++ b/changes/29.0.5.md
@@ -18,4 +18,4 @@
   - TWO RINGS ALIGNED HORIZONTALLY (`U+1CC88`)  (Proposed for Unicode 16; L2/21-235).
   - LEFT-POINTING RACING CAR (`U+1CC97`) ... VERTICAL GO-KART (`U+1CC9D`)  (Proposed for Unicode 16; L2/21-235).
   - TOP LEFT BLACK LEFT-POINTING SMALL TRIANGLE (`U+1CE07`)  (Proposed for Unicode 16; L2/21-235).
-* Add APL form for WHITE DIAMOND (`U+25C7`)  (Proposed for Unicode 16; L2/21-235).
+* Add APL form for WHITE DIAMOND (`U+25C7`).
