Fix glyph visual of `cyrl/Ef.BGR` under slab.

--- a/changes/29.0.6.md
+++ b/changes/29.0.6.md
@@ -1,1 +1,2 @@
 * Fix broken glyphs for serifed variants of LATIN SMALL LETTER S WITH CURL (`U+1DF1E`).
+* Improve glyph visual for Bulgarian localization form for CYRILLIC CAPITAL LETTER EF (`U+0424`) under slab.
