Make serifs of `cyrl/{Koppa|koppa}` more sensitive.

--- a/changes/29.0.6.md
+++ b/changes/29.0.6.md
@@ -1,3 +1,4 @@
 * Fix broken glyphs for serifed variants of LATIN SMALL LETTER S WITH CURL (`U+1DF1E`).
 * Improve glyph visual for Bulgarian localization form for CYRILLIC CAPITAL LETTER EF (`U+0424`) under slab.
+* Make descender serif of CYRILLIC {CAPITAL|SMALL} LETTER KOPPA (`U+0480`..`U+0481`) appear under any serifed variants for `C`/`c`.
 * Make presence of descender serif automatic for LATIN CAPTITAL LETTER BETA (`U+A7B4`).
