Remove tailless variants for `U+2129`.

--- a/changes/29.0.6.md
+++ b/changes/29.0.6.md
@@ -2,3 +2,4 @@
 * Improve glyph visual for Bulgarian localization form for CYRILLIC CAPITAL LETTER EF (`U+0424`) under slab.
 * Make descender serif of CYRILLIC {CAPITAL|SMALL} LETTER KOPPA (`U+0480`..`U+0481`) appear under any serifed variants for `C`/`c`.
 * Make presence of descender serif automatic for LATIN CAPTITAL LETTER BETA (`U+A7B4`).
+* Remove tailless variants for TURNED GREEK SMALL LETTER IOTA (`U+2129`).
