--- a/changes/29.0.6.md
+++ b/changes/29.0.6.md
@@ -3,3 +3,4 @@
 * Make descender serif of CYRILLIC {CAPITAL|SMALL} LETTER KOPPA (`U+0480`..`U+0481`) appear under any serifed variants for `C`/`c`.
 * Make presence of descender serif automatic for LATIN CAPTITAL LETTER BETA (`U+A7B4`).
 * Remove tailless variants for TURNED GREEK SMALL LETTER IOTA (`U+2129`).
+* Make presence of top-right serif automatic for CYRILLIC SMALL LIGATURE EN GHE (`U+04A5`) under `cyrl/en`=`tailed-top-left-serifed`.
