--- a/changes/29.0.6.md
+++ b/changes/29.0.6.md
@@ -4,3 +4,4 @@
 * Make presence of descender serif automatic for LATIN CAPTITAL LETTER BETA (`U+A7B4`).
 * Remove tailless variants for TURNED GREEK SMALL LETTER IOTA (`U+2129`).
 * Make presence of top-right serif automatic for CYRILLIC SMALL LIGATURE EN GHE (`U+04A5`) under `cyrl/en`=`tailed-top-left-serifed`.
+* Fix broken geometry of tailed `i`/`l` under heavy oblique quasi-proportional.
