--- a/changes/29.0.6.md
+++ b/changes/29.0.6.md
@@ -5,3 +5,4 @@
 * Remove tailless variants for TURNED GREEK SMALL LETTER IOTA (`U+2129`).
 * Make presence of top-right serif automatic for CYRILLIC SMALL LIGATURE EN GHE (`U+04A5`) under `cyrl/en`=`tailed-top-left-serifed`.
 * Fix broken geometry of tailed `i`/`l` under heavy oblique quasi-proportional.
+* Make Cyrillic Lower Em (`cv74`) use `flat-bottom-serifless` for sans and `flat-bottom-serifed` for slab by default.
