Adjust Latin-1 Macron, add a modifier letter.

--- a/changes/29.1.0.md
+++ b/changes/29.1.0.md
@@ -7,3 +7,6 @@
 * Make presence of top-right serif automatic for CYRILLIC SMALL LIGATURE EN GHE (`U+04A5`) under `cyrl/en`=`tailed-top-left-serifed`.
 * Fix broken geometry of tailed `i`/`l` under heavy oblique quasi-proportional.
 * Make Cyrillic Lower Em (`cv74`) use `flat-bottom-serifless` for sans and `flat-bottom-serifed` for slab by default.
+* Make Latin-1 Macron (`U+00AF`) slightly wider.
+* Add characters:
+  - MODIFIER LETTER LOWER RIGHT CORNER ANGLE (`U+A71A`).
