Adjust glyphs of `cyrl/{Dhe|dhe|The|the}`.

--- a/changes/29.1.1.md
+++ b/changes/29.1.1.md
@@ -4,3 +4,4 @@
 * Make GREEK SMALL LETTER HETA (`U+0371`) respond to top-left serif variants of `H` (`cv08`).
 * Make CYRILLIC {CAPITAL|SMALL} LIGATURE EN GHE (`U+04A4`..`U+04A5`) respond to top-right serif variants of Greek Capital Gamma (`cv56`).
 * Make CYRILLIC {CAPITAL|SMALL} LETTER STRAIGHT U (`U+04AE`..`U+04B1`) follow variants of Cyrillic Capital/Small U (`cv77`..`cv78`).
+* Make the descender part of CYRILLIC {CAPITAL|SMALL} LETTER {ZE|ES} WITH DESCENDER (`U+0498`..`U+0499`, `U+04AA`..`U+04AB`) visually distinct from a cedilla, and curling right instead of left.
