--- a/changes/29.2.1.md
+++ b/changes/29.2.1.md
@@ -23,3 +23,4 @@
   - UPPER LEFT QUADRANT FACE WITH OPEN EYES (`U+1CCA6`) ... BOTTOM HALF FORWARD-FACING RUNNER FRAME-4 (`U+1CDF4`)  (Proposed for Unicode 16; L2/21-235).
   - TOP HALF FLAILING ROBOT FRAME-1 (`U+1CDF6`)  (Proposed for Unicode 16; L2/21-235).
   - TOP HALF FLAILING ROBOT FRAME-2 (`U+1CDF7`)  (Proposed for Unicode 16; L2/21-235).
+* Fix `zero` feature application on MATHEMATICAL MONOSPACE DIGIT ZERO (`U+1D7F6`) (#2298). 
