Make `cyrl/Shha` follow `H`.

--- a/changes/29.2.1.md
+++ b/changes/29.2.1.md
@@ -1,5 +1,6 @@
 * Refine shape of `U+1CC09`, `U+1CC0A`, `U+1CC10` and `U+1CC11`.
 * Refine terminal shape of Schwa and Reversed Lower E (`U+018F`, `U+0258`..`U+025A`, `U+04D8`..`U+04D9`) under italics.
+* Make CYRILLIC CAPITAL LETTER SHHA (`U+04BA`) follow variants of Capital H (`cv08`).
 * Add characters:
   - ARC (`U+2312`) ... SECTOR (`U+2314`).
   - ERASE TO THE RIGHT (`U+2326`) ... X IN A RECTANGLE BOX (`U+2327`) (#2289).
