Fix bar position of `cyrl/{Nje|nje}`.

--- a/changes/29.2.2.md
+++ b/changes/29.2.2.md
@@ -1,3 +1,4 @@
 * Refine shape of CYRILLIC CAPITAL LETTER SHHA (`U+04BA`).
+* Fix H bar position of CYRILLIC {CAPITAL|SMALL} LETTER NJE (`U+040A`, `U+045A`).
 * Add characters:
   - KEYBOARD (`U+2328`).
