--- a/changes/30.0.0.md
+++ b/changes/30.0.0.md
@@ -8,5 +8,6 @@
 * Fix H bar position of CYRILLIC {CAPITAL|SMALL} LETTER NJE (`U+040A`, `U+045A`).
 * Fix mapping of LEFT-FACING SNAKE HEAD WITH OPEN MOUTH (`U+1CC70`) ... DOWN-FACING SNAKE HEAD WITH CLOSED MOUTH (`U+1CC77`).
 * Add characters:
-  - KEYBOARD (`U+2328`).
   - BOTTOM RIGHT CROP (`U+230C`) ... TOP LEFT CROP (`U+230F`).
+  - KEYBOARD (`U+2328`).
+  - COUNTERBORE (`U+2334`).
