Add five letters with palatal hook.

--- a/changes/30.0.1.md
+++ b/changes/30.0.1.md
@@ -1,4 +1,6 @@
 * Add characters:
+  - LATIN SMALL LETTER L WITH BELT AND PALATAL HOOK (`U+1DF13`) ... LATIN SMALL LETTER R WITH FISHHOOK AND PALATAL HOOK (`U+1DF16`).
+  - LATIN SMALL LETTER EZH WITH PALATAL HOOK (`U+1DF18`).
   - LATIN SMALL LETTER I WITH STROKE AND RETROFLEX HOOK (`U+1DF1A`).
   - LATIN SMALL LETTER O WITH RETROFLEX HOOK (`U+1DF1B`).
   - LATIN SMALL LETTER C WITH RETROFLEX HOOK (`U+1DF1D`).
