Reduce `z` variants in phonetic digraphs, fix hook of capital Eng. (#2329)
* Remove top-left serif of `z` in phonetic digraphs.

* Fix capital Eng hook under heavy.

* Unify Meng hook with Eng.

* fix typo

* Optimize

--- a/changes/30.0.1.md
+++ b/changes/30.0.1.md
@@ -1,3 +1,5 @@
+* Remove top-left serifs of `z`-parts of phonetic digraphs involving `d` (`U+02A3`..`U+02A5`, `U+AB66`).
+* Fix stroke width of hook part of LATIN CAPITAL LETTER ENG (`U+014A`) under heavy weight.
 * Add characters:
   - LATIN SMALL LETTER L WITH BELT AND PALATAL HOOK (`U+1DF13`) ... LATIN SMALL LETTER R WITH FISHHOOK AND PALATAL HOOK (`U+1DF16`).
   - LATIN SMALL LETTER EZH WITH PALATAL HOOK (`U+1DF18`).
