Add Cyrillic Tche (`U+A692`..`U+A693`).

--- a/changes/30.1.0.md
+++ b/changes/30.1.0.md
@@ -6,8 +6,7 @@
   - SQUAT BLACK RIGHTWARDS ARROW (`U+27A7`).
   - CYRILLIC CAPITAL LETTER CCHE (`U+A686`).
   - CYRILLIC SMALL LETTER CCHE (`U+A687`).
-  - CYRILLIC CAPITAL LETTER HWE (`U+A694`).
-  - CYRILLIC SMALL LETTER HWE (`U+A695`).
+  - CYRILLIC CAPITAL LETTER TCHE (`U+A692`) ... CYRILLIC SMALL LETTER HWE (`U+A695`).
   - LATIN SMALL LETTER U WITH SHORT RIGHT LEG (`U+AB4E`).
   - LATIN SMALL LETTER U BAR WITH SHORT RIGHT LEG (`U+AB4F`).
   - LATIN SMALL LETTER DEZH DIGRAPH WITH PALATAL HOOK (`U+1DF12`).
