Add Cyrillic Dzwe (`U+A682`..`U+A683`).

--- a/changes/30.1.0.md
+++ b/changes/30.1.0.md
@@ -4,6 +4,8 @@
   - HOURGLASS (`U+231B`).
   - ALARM CLOCK (`U+23F0`) ... HOURGLASS WITH FLOWING SAND (`U+23F3`).
   - SQUAT BLACK RIGHTWARDS ARROW (`U+27A7`).
+  - CYRILLIC CAPITAL LETTER DZWE (`U+A682`).
+  - CYRILLIC SMALL LETTER DZWE (`U+A683`).
   - CYRILLIC CAPITAL LETTER CCHE (`U+A686`).
   - CYRILLIC SMALL LETTER CCHE (`U+A687`).
   - CYRILLIC CAPITAL LETTER TCHE (`U+A692`) ... CYRILLIC SMALL LETTER HWE (`U+A695`).
