Adjust balancing of r with corner hooks (#2394)

--- a/changes/30.3.1.md
+++ b/changes/30.3.1.md
@@ -4,3 +4,4 @@
 * Optimize glyph shape for `U+01A6`.
 * Make Aile and Etoile use {`six`|`nine`}.`closed-contour` by default.
 * Make `ss20` use `seven`.`curly-serifless` by default.
+* Adjust balancing of r with corner hooks (#2394).
