Minor cleanup of variants.

--- a/changes/31.0.0.md
+++ b/changes/31.0.0.md
@@ -147,6 +147,6 @@
     | `lig-single-arrow-bar` | `VLAG` | `VLAG` |
   
     </details>
-* \[**Breaking**] Reordered variants for Cyrillic Capital Ze.
+* \[**Breaking**] Reordered variants for Cyrillic Capital/Lower Ze.
 * Add separate variant selectors For Cyrillic Lower A/Ve (`cv79`, `cv99`).
 * Optimize the shape of rounded `e` (#2424).
