Add `bilateral-motion-serifed` variants for X.

--- a/changes/31.0.0.md
+++ b/changes/31.0.0.md
@@ -148,5 +148,10 @@
   
     </details>
 * \[**Breaking**] Reordered variants for Cyrillic Capital/Lower Ze.
+* \[**Breaking**] Add `bilateral-motion-serifed` variants for Capital/Lower X.
+* \[**Breaking**] Add `semi-chancery-straight-serifed` and `semi-chancery-curly-serifed` variants for Greek Lower Chi. Change of variant names:
+  - `lower-chi`.`semi-chancery-straight` → `lower-chi`.`semi-chancery-straight-serifless`
+  - `lower-chi`.`semi-chancery-curly` → `lower-chi`.`semi-chancery-curly-serifless`
+  - `lower-chi`.`serifed` → `lower-chi`.`bilateral-motion-serifed`
 * Add separate variant selectors For Cyrillic Lower A/Ve (`cv79`, `cv99`).
 * Optimize the shape of rounded `e` (#2424).
