Add variant selectors for Cyrillic Capital En/Er.

--- a/changes/31.0.1.md
+++ b/changes/31.0.1.md
@@ -1,3 +1,4 @@
+* Add separate variant selectors for Cyrillic Capital En/Er (`VXAA`, `VXAB`).
 * Add characters:
   - BLACK-LETTER CAPITAL H (`U+210C`).
   - BLACK-LETTER CAPITAL I (`U+2111`).
