--- a/changes/31.0.1.md
+++ b/changes/31.0.1.md
@@ -5,3 +5,4 @@
   - BLACK-LETTER CAPITAL R (`U+211C`) (#714).
   - BLACK-LETTER CAPITAL Z (`U+2128`) (#714).
   - BLACK-LETTER CAPITAL C (`U+212D`) (#714).
+  - MATHEMATICAL FRAKTUR CAPITAL J (`U+1D50D`) (#444).
