--- a/changes/31.1.0.md
+++ b/changes/31.1.0.md
@@ -5,4 +5,9 @@
   - BLACK-LETTER CAPITAL R (`U+211C`) (#714).
   - BLACK-LETTER CAPITAL Z (`U+2128`) (#714).
   - BLACK-LETTER CAPITAL C (`U+212D`) (#714).
+  - LATIN SMALL LETTER BLACKLETTER E (`U+AB32`) (#2443).
+  - LATIN SMALL LETTER BLACKLETTER O (`U+AB3D`) (#2443).
+  - LATIN SMALL LETTER BLACKLETTER O WITH STROKE (`U+AB3E`) (#2443).
   - MATHEMATICAL FRAKTUR CAPITAL J (`U+1D50D`) (#444).
+  - MATHEMATICAL FRAKTUR SMALL E (`U+1D522`) (#444).
+  - MATHEMATICAL FRAKTUR SMALL O (`U+1D52C`) (#444).
