Add fraktur A and K

--- a/changes/31.1.0.md
+++ b/changes/31.1.0.md
@@ -10,8 +10,10 @@
   - LATIN SMALL LETTER BLACKLETTER E (`U+AB32`) (#2443).
   - LATIN SMALL LETTER BLACKLETTER O (`U+AB3D`) (#2443).
   - LATIN SMALL LETTER BLACKLETTER O WITH STROKE (`U+AB3E`) (#2443).
+  - MATHEMATICAL FRAKTUR CAPITAL A (`U+1D504`) (#444).
   - MATHEMATICAL FRAKTUR CAPITAL E (`U+1D508`) (#444).
   - MATHEMATICAL FRAKTUR CAPITAL G (`U+1D50A`) (#444).
   - MATHEMATICAL FRAKTUR CAPITAL J (`U+1D50D`) (#444).
+  - MATHEMATICAL FRAKTUR CAPITAL K (`U+1D50E`) (#444).
   - MATHEMATICAL FRAKTUR SMALL E (`U+1D522`) (#444).
   - MATHEMATICAL FRAKTUR SMALL O (`U+1D52C`) (#444).
