Add   - MATHEMATICAL FRAKTUR CAPITAL B (`U+1D505`).   - MATHEMATICAL FRAKTUR CAPITAL M (`U+1D510`).   - MATHEMATICAL FRAKTUR CAPITAL N (`U+1D511`).   - MATHEMATICAL FRAKTUR CAPITAL P (`U+1D513`).   - MATHEMATICAL FRAKTUR CAPITAL V (`U+1D519`).   - MATHEMATICAL FRAKTUR CAPITAL W (`U+1D51A`).

--- a/changes/31.1.0.md
+++ b/changes/31.1.0.md
@@ -1,7 +1,3 @@
-* Add separate variant selectors for Cyrillic Capital En/Er (`VXAA`, `VXAB`).
-* Add variant selectors for Greek lower Beta/Gamma/Nu/Upsilon (`VXAC`, `VXAD`, `VXAE`, `VXAF`).
-* Optimize glyph for VERTICAL LINE WITH MIDDLE DOT (`U+2327`).
-* Improve `k` (`cv46`) and `x` (`cv58`) variants used by `ss03`, `ss08`, `ss09`, `ss10`, `ss12`, `ss14`, and `ss18` under slab italic.
 * Add characters:
   - BLACK-LETTER CAPITAL H (`U+210C`) (#714).
   - BLACK-LETTER CAPITAL I (`U+2111`) (#714).
@@ -12,9 +8,19 @@
   - LATIN SMALL LETTER BLACKLETTER O (`U+AB3D`) (#2443).
   - LATIN SMALL LETTER BLACKLETTER O WITH STROKE (`U+AB3E`) (#2443).
   - MATHEMATICAL FRAKTUR CAPITAL A (`U+1D504`) (#444).
+  - MATHEMATICAL FRAKTUR CAPITAL B (`U+1D505`) (#444).
   - MATHEMATICAL FRAKTUR CAPITAL E (`U+1D508`) (#444).
   - MATHEMATICAL FRAKTUR CAPITAL G (`U+1D50A`) (#444).
   - MATHEMATICAL FRAKTUR CAPITAL J (`U+1D50D`) (#444).
   - MATHEMATICAL FRAKTUR CAPITAL K (`U+1D50E`) (#444).
+  - MATHEMATICAL FRAKTUR CAPITAL M (`U+1D510`) (#444).
+  - MATHEMATICAL FRAKTUR CAPITAL N (`U+1D511`) (#444).
+  - MATHEMATICAL FRAKTUR CAPITAL P (`U+1D513`) (#444).
+  - MATHEMATICAL FRAKTUR CAPITAL V (`U+1D519`) (#444).
+  - MATHEMATICAL FRAKTUR CAPITAL W (`U+1D51A`) (#444).
   - MATHEMATICAL FRAKTUR SMALL E (`U+1D522`) (#444).
   - MATHEMATICAL FRAKTUR SMALL O (`U+1D52C`) (#444).
+* Add separate variant selectors for Cyrillic Capital En/Er (`VXAA`, `VXAB`).
+* Add variant selectors for Greek lower Beta/Gamma/Nu/Upsilon (`VXAC`, `VXAD`, `VXAE`, `VXAF`).
+* Optimize glyph for VERTICAL LINE WITH MIDDLE DOT (`U+2327`).
+* Improve `k` (`cv46`) and `x` (`cv58`) variants used by `ss03`, `ss08`, `ss09`, `ss10`, `ss12`, `ss14`, and `ss18` under slab italic.
