* Add characters:   - OCR HOOK (`U+2440`) .. OCR BOW TIE (`U+2445`) (#2465).

--- a/changes/31.4.0.md
+++ b/changes/31.4.0.md
@@ -1,1 +1,4 @@
+* Add characters:
+  - OCR HOOK (`U+2440`) .. OCR BOW TIE (`U+2445`) (#2465).
+* Add slanted dollar and cent sign (#2408).
 * Add round-top capital A (#2472).
