Improve glyph visual of Combining Suspension Mark.

--- a/changes/31.6.0.md
+++ b/changes/31.6.0.md
@@ -1,2 +1,3 @@
 * Add Latin localization forms for Polish and Romanian.
 * Make Combining Square Below (`U+033B`) slightly narrower.
+* Improve glyph visual for Combining Suspension Mark (`U+1DC3`).
