Add LATIN EPIGRAPHIC LETTER ARCHAIC M (`U+A7FF`) (#2517).

--- a/changes/31.8.0.md
+++ b/changes/31.8.0.md
@@ -1,2 +1,4 @@
+* Add characters:
+  - LATIN EPIGRAPHIC LETTER ARCHAIC M (`U+A7FF`) (#2517).
 * Improve glyph for Cyrillic I (`И`/`и`) under slab (#2489).
   - Bulgarian locale (`'BGR'`) uses original style for capital.
