Add italic superscripts (MUSICAL SYMBOL RINFORZANDO (`U+1D18C`) ... MUSICAL SYMBOL FORTE (`U+1D191`) (#2522)).

--- a/changes/31.8.0.md
+++ b/changes/31.8.0.md
@@ -1,4 +1,5 @@
 * Add characters:
   - LATIN EPIGRAPHIC LETTER ARCHAIC M (`U+A7FF`) (#2517).
+  - MUSICAL SYMBOL RINFORZANDO (`U+1D18C`) ... MUSICAL SYMBOL FORTE (`U+1D191`) (#2522).
 * Improve glyph for Cyrillic I (`И`/`и`) under slab (#2489).
   - Bulgarian locale (`'BGR'`) uses original style for capital.
