Allowed customizing menu WWS value to name map (#2488).

--- a/changes/31.8.1.md
+++ b/changes/31.8.1.md
@@ -3,3 +3,4 @@
 * Optimize glyphs for cursive variants for Greek Lower Beta (`β`) and Cyrillic Lower Ve (`в`).
 * Optimize glyphs for Volapük Ae/Oe/Ue (`U+A79A`..`U+A79F`).
 * Optimize glyph for Cyrillic Lower Dzze (`U+A689`) under italics.
+* Allowed customizing menu WWS value to name map (#2488).
