Draft: Armenian Letters (again) (#2556)
* split

* more fixes, 2 new char

* reapplying changes

* finetune lower keh

* Adjust jut sizes

* balance lower liun and to (?)

* cleanup

* move aliases

* modify flatside

* dash, changelog

* changelog fix, lower-q-group fix

* fix changelog

---------

Co-authored-by: Belleve <belleve@typeof.net>

--- a/changes/32.0.0.md
+++ b/changes/32.0.0.md
@@ -4,4 +4,8 @@
   - LONG RIGHT TACK (`U+27DD`).
   - LONG LEFT TACK (`U+27DE`).
   - UP ARROW THROUGH CIRCLE (`U+29BD`).
+* Add Armenian letters:
+  - ARMENIAN CAPITAL LETTER AYB (`U+0531`) ... ARMENIAN CAPITAL LETTER FEH (`U+0556`).
+  - ARMENIAN SMALL LETTER TURNED AYB (`U+0560`) ... ARMENIAN HYPHEN (`U+058A`).
+  - ARMENIAN DRAM SIGN (`U+058F`).
 * Optimize `semi-chancery-straight-serifed` and `semi-chancery-curly-serifed` variants for `x` (`cv58`).
