--- a/changes/32.2.0.md
+++ b/changes/32.2.0.md
@@ -1,1 +1,13 @@
-* Make M-width small-capital characters slightly narrower under Quasi-Proportional.
+* Make M-width small-capital characters slightly narrower under Quasi-Proportional. Affected characters:
+  - LATIN LETTER SMALL CAPITAL OE (`U+0276`).
+  - GREEK SMALL LETTER SAN (`U+03FB`).
+  - CYRILLIC SMALL LETTER EM (`U+043C`).
+  - CYRILLIC SMALL LETTER EM WITH TAIL (`U+04CE`).
+  - LATIN LETTER SMALL CAPITAL AE (`U+1D01`).
+  - LATIN LETTER SMALL CAPITAL M (`U+1D0D`).
+  - LATIN LETTER SMALL CAPITAL W (`U+1D21`).
+  - CYRILLIC SMALL LETTER SOFT EM (`U+A667`).
+  - LATIN LETTER SMALL CAPITAL TURNED M (`U+A7FA`).
+  - MODIFIER LETTER SMALL CAPITAL AA (`U+10780`).
+  - MODIFIER LETTER SMALL CAPITAL OE (`U+107A3`).
+  - MODIFIER LETTER CYRILLIC SMALL EM (`U+1E03B`).
