--- a/changes/32.2.0.md
+++ b/changes/32.2.0.md
@@ -6,6 +6,7 @@
   - LATIN LETTER SMALL CAPITAL AE (`U+1D01`).
   - LATIN LETTER SMALL CAPITAL M (`U+1D0D`).
   - LATIN LETTER SMALL CAPITAL W (`U+1D21`).
+  - GREEK LETTER SMALL CAPITAL PSI (`U+1D2A`).
   - CYRILLIC SMALL LETTER SOFT EM (`U+A667`).
   - LATIN LETTER SMALL CAPITAL TURNED M (`U+A7FA`).
   - MODIFIER LETTER SMALL CAPITAL AA (`U+10780`).
