Make two characters slightly wider under Quasi-Proportional.

--- a/changes/32.2.1.md
+++ b/changes/32.2.1.md
@@ -1,8 +1,9 @@
 * Make certain characters slightly wider under Quasi-Proportional. Affected characters:
   - CYRILLIC CAPITAL LETTER DJE (`U+0402`).
   - CYRILLIC CAPITAL LETTER TSHE (`U+040B`).
+  - CYRILLIC CAPITAL LETTER IOTIFIED LITTLE YUS (`U+0468`).
+  - CYRILLIC CAPITAL LETTER IOTIFIED BIG YUS (`U+046C`).
   - CYRILLIC CAPITAL LETTER YERU WITH BACK YER (`U+A650`).
   - CYRILLIC SMALL LETTER YERU WITH BACK YER (`U+A651`).
   - LATIN EPIGRAPHIC LETTER ARCHAIC M (`U+A7FF`).
-  - COUNTING ROD UNIT DIGIT ONE (`U+1D360`) ... COUNTING ROD TENS DIGIT NINE (`U+1D371`).
   - MODIFIER LETTER CYRILLIC SMALL YERU WITH BACK YER (`U+1E06C`).
