--- a/changes/32.2.1.md
+++ b/changes/32.2.1.md
@@ -13,3 +13,29 @@
   - CYRILLIC SMALL LETTER TCHE (`U+A693`).
   - LATIN EPIGRAPHIC LETTER ARCHAIC M (`U+A7FF`).
   - MODIFIER LETTER CYRILLIC SMALL YERU WITH BACK YER (`U+1E06C`).
+* Add characters:
+  - DOUBLE INTERSECTION (`U+22D2`).
+  - DOUBLE UNION (`U+22D3`).
+  - LEFT OUTER JOIN (`U+27D5`).
+  - RIGHT OUTER JOIN (`U+27D6`).
+  - FULL OUTER JOIN (`U+27D7`).
+  - Z NOTATION LEFT BINDING BRACKET (`U+2989`).
+  - Z NOTATION RIGHT BINDING BRACKET (`U+298A`).
+  - TRIANGLE WITH DOT ABOVE (`U+29CA`).
+  - TRIANGLE WITH UNDERBAR (`U+29CB`).
+  - TRIANGLE WITH SERIFS AT BOTTOM (`U+29CD`).
+  - N-ARY TIMES OPERATOR (`U+2A09`).
+  - JOIN (`U+2A1D`).
+  - LARGE LEFT TRIANGLE OPERATOR (`U+2A1E`).
+  - CLOSED UNION WITH SERIFS (`U+2A4C`).
+  - CLOSED INTERSECTION WITH SERIFS (`U+2A4D`).
+  - DOUBLE SQUARE INTERSECTION (`U+2A4E`).
+  - DOUBLE SQUARE UNION (`U+2A4F`).
+  - SLOPING LARGE OR (`U+2A57`).
+  - SLOPING LARGE AND (`U+2A58`).
+  - LOGICAL AND WITH MIDDLE STEM (`U+2A5A`).
+  - LOGICAL OR WITH MIDDLE STEM (`U+2A5B`).
+  - Z NOTATION DOMAIN ANTIRESTRICTION (`U+2A64`).
+  - Z NOTATION RANGE ANTIRESTRICTION (`U+2A65`).
+  - SMALLER THAN (`U+2AAA`) ... LARGER THAN OR EQUAL TO (`U+2AAD`).
+  - CLOSED SUBSET (`U+2ACF`) ... CLOSED SUPERSET OR EQUAL TO (`U+2AD2`).
